--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -2,6 +2,13 @@ body {
   font-family: Helvetica;
 }
 .app {
-  margin-top: 20px;
-  margin-bottom: 20px;
+  display: flex;
+}
+
+.channels {
+  width: 30%;
+}
+
+.message-list {
+  width: 70%;
 }
